--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
@@ -22,7 +22,7 @@
 </head>
 <body>
   <nav class="topNav" id="topNav">
-    <a href="index.html" class="imbeingstupid"><img src="Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
+    <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     <a class="link home active" href="index.html">Home</a>
     <a class="link eventspage" href="events.html">Events</a>
@@ -30,10 +30,10 @@
   </nav>
   <header>
     <video autoplay muted loop>
-      <source src="highlight_reel.mp4" type="video/mp4">
+      <source src="videos/highlight_reel.mp4" type="video/mp4">
     </video>
-    <img class="index_img" src="homePage.jpg" alt="Seth Playing at the POPs concert">
-    <img class="words" src="Seth_Charleston.png" alt="Seth Charleston">
+    <img class="index_img" src="photos/homePage.jpg" alt="Seth Playing at the POPs concert">
+    <img class="words" src="photos/Seth_Charleston.png" alt="Seth Charleston">
   </header>
   <main>
     <section class="info">
@@ -113,7 +113,6 @@
           }
         });
       });
-
   </script>
   <script>
     function myFunction() {
