--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
@@ -31,14 +31,14 @@
 
 <body>
   <nav class="topNav" id="topNav">
-    <a href="index.html" class="imbeingstupid"><img src="Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
+    <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     <a class="link" href="index.html">Home</a>
     <a class="link" href="events.html">Events</a>
     <a class="link active" href="music.html">Music</a>
   </nav>
   <header>
-    <img class="non_index_img" src="musicPage.jpg" alt="Seth Playing at the POPs concert">
+    <img class="non_index_img" src="photos/musicPage.jpg" alt="Seth Playing at the POPs concert">
     <div class="spacer">Music:</div>
     <div class="fader"></div>
   </header>
