--- a/index.html
+++ b/index.html
@@ -22,18 +22,28 @@
 </head>
 <body>
   <nav class="topNav" id="topNav">
-    <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-    <a class="link home active" href="index.html">Home</a>
-    <a class="link eventspage" href="events.html">Events</a>
-    <a class="link music" href="music.html">Music</a>
+    <div id="links">
+      <a class="link home" href="bio.html">Bio</a>
+      <a class="link music" href="music.html">Music</a>
+      <a class="link eventspage" href="store.html">Store</a>
+    </div>
+    <div id="logo">
+      <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
+    </div>
+    <div id="social">
+      <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
+      <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook link" target="_blank"></a>
+      <a href="https://www.instagram.com/sethcharlestonmusic" class="fa fa-instagram link" target="_blank"></a>
+      <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify link" target="_blank"></a>
+      <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube link" target="_blank"></a>
+    </div>
   </nav>
   <header>
     <video autoplay muted loop>
       <source src="videos/highlight_reel.mp4" type="video/mp4">
     </video>
     <img class="index_img" src="photos/homePage.jpg" alt="Seth Playing at the POPs concert">
-    <img class="words" src="photos/Seth_Charleston.png" alt="Seth Charleston">
   </header>
   <main>
     <section class="info">
