fixed header and nav

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 </head>
 <body>
   <nav class="topNav" id="topNav">
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    <div id="logo">
+      <a href="index.html" class="logoWrap"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
     <div id="links">
       <a class="link home" href="bio.html">Bio</a>
       <a class="link music" href="music.html">Music</a>
       <a class="link eventspage" href="store.html">Store</a>
-    </div>
-    <div id="logo">
-      <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
     </div>
     <div id="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
@@ -43,7 +43,8 @@
     <video autoplay muted loop>
       <source src="videos/highlight_reel.mp4" type="video/mp4">
     </video>
-    <img class="index_img" src="photos/homePage.jpg" alt="Seth Playing at the POPs concert">
+    <div id="homeImage"></div>
+    <img class="words" src="photos/Seth_Charleston.png" alt="Seth Charleston">
   </header>
   <main>
     <section class="info">
