--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div id="links">
-      <a class="link home" href="bio.html">Bio</a>
-      <a class="link music" href="music.html">Music</a>
-      <a class="link eventspage" href="store.html">Store</a>
+      <a class="link" href="bio.html">Bio</a>
+      <a class="link" href="music.html">Music</a>
+      <a class="link" href="store.html">Store</a>
     </div>
     <div id="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
@@ -48,33 +48,28 @@
   </header>
   <main>
     <section class="info">
-      <h1>Seth Charleston</h1>
-      <p id="bio">
-      Seth Charleston makes eclectic indie rock stemming from a wide variety of influences.
-      His songs are crafted with a strong focus on groove, melody, and intricate instrumentation.
-      As a 17-year-old, he released his debut project, titled the Waiting for the Day EP.
-      Released independently on March 16th, 2018, the EP showcased a raw but promising indie rock sound.
-      <br><br>
-      The rest of 2018 saw the releases of singles Carpe Noctem and Jungle, respectively.
-      Both songs marked additional steps in the right direction towards his artistic development.
-      Jungle in particular marked a turning point for Seth. Not only did it bring forth a different sound,
-      it more importantly was released in conjunction with his move from his Wisconsin hometown to Los Angeles, CA.
-      <br><br>
-      Now based in LA, Seth continues to evolve his sound. Lightseeker, his first release of 2019,
-      demonstrates that growth and maturation firsthand.
-      </p>
-    </section>
-    <div id="background"></div>
-    <section class="section">
-
-    </section>
-    <section class="video">
-      <h1 class="title">New Music Video!</h1>
-      <iframe src="https://www.youtube.com/embed/-savFW8qOOY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div>
+        <iframe src="https://open.spotify.com/embed/track/7gmFkbT1wLxplEhVPVdxHI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <div>
+          <h1>My debut EP is here.</h1>
+          <p>Stay True, my debut EP, is out now. I spent the last year writing, producing, and recording this record in Los Angeles, CA. The result is four anthemic tunes celebrating the truth of the individual. I’m immensely proud of these songs and I’m beyond excited to finally have this record out in the world. I sincerely hope you enjoy this project.</p>
+        </div>
+      </div>
+      <div>
+        <h1>Stay up to date.</h1>
+        <a class="twitter-timeline" data-height="380px" data-theme="light" href="https://twitter.com/sethcharleston?ref_src=twsrc%5Etfw">Tweets by sethcharleston</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
     </section>
   </main>
   <footer>
-    <div class="title">Social</div>
+    <section class="title">
+    <div class="social">
+      <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
+      <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
+      <a href="https://www.instagram.com/sethcharlestonmusic" class="fa fa-instagram" target="_blank"></a>
+      <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
+      <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
+    </div>
     <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
         <div id="imbeingrealstupid">Sign-up for my mailing list!</div>
@@ -98,15 +93,11 @@
       </form>
       </div>
     <!--End mc_embed_signup-->
-    <div class="social">
-      <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
-      <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
-      <a href="https://www.instagram.com/sethcharlestonmusic" class="fa fa-instagram" target="_blank"></a>
-      <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
-      <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
-      <p>Booking: <a href="mailto:seth.charleston@gmail.com">seth.charleston@gmail.com</a></p>
-    </div>
-    <div class="footer">Web Developement By <a href="mailto:arthur.sommer@gmail.com">Arthur Sommer</a></div>
+    <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a> | Web Developement By <a href="mailto:arthur.sommer@gmail.com">Arthur Sommer</a></div>
+  </section>
+  <section class="footerImg">
+    <img src="photos/HomePage.jpg" alt="Seth Charleston">
+  </section>
   </footer>
   <script>
     events = [];
