--- a/music.html
+++ b/music.html
@@ -36,7 +36,7 @@
     </div>
     <div id="links">
       <a class="link" href="bio.html">Bio</a>
-      <a class="link" href="music.html">Music</a>
+      <a class="link active" href="music.html">Music</a>
       <a class="link" href="store.html">Store</a>
     </div>
     <div id="social">
