--- a/music.html
+++ b/music.html
@@ -51,7 +51,7 @@
     <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert">
     <div class="spacer">Music</div>
   </header>
-  <main id="info">
+  <main id="info" class="main">
     <!-- <section class="album">
       <iframe src="https://open.spotify.com/embed/track/11ksP7Y2V8brYXQuvCug55" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </section>
