split booking and web dev and fixed insta link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
       <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook link" target="_blank"></a>
-      <a href="https://www.instagram.com/sethcharlestonmusic" class="fa fa-instagram link" target="_blank"></a>
+      <a href="https://www.instagram.com/sethcharleston/" class="fa fa-instagram link" target="_blank"></a>
       <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify link" target="_blank"></a>
       <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube link" target="_blank"></a>
     </div>
@@ -67,7 +67,7 @@
     <div class="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
       <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
-      <a href="https://www.instagram.com/sethcharlestonmusic" class="fa fa-instagram" target="_blank"></a>
+      <a href="https://www.instagram.com/sethcharleston/" class="fa fa-instagram" target="_blank"></a>
       <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
       <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
     </div>
@@ -94,7 +94,7 @@
       </form>
       </div>
     <!--End mc_embed_signup-->
-    <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a>  |  Web Developement By <a href="mailto:arthur.sommer@gmail.com">Arthur Sommer</a></div>
+    <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
   </section>
   <section class="footerImg">
     <img src="photos/HomePage.jpg" alt="Seth Charleston">
