--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </nav>
   <header>
     <video autoplay muted loop>
-      <source src="videos/highlight_reel.mp4" type="video/mp4">
+      <source src="videos\Take a Seat (Website Header).mp4" type="video/mp4">
     </video>
     <div id="homeImage">
     </div>
@@ -59,6 +59,10 @@
       <div>
         <h1>Stay up to date.</h1>
         <a class="twitter-timeline" data-height="380px" data-theme="light" href="https://twitter.com/sethcharleston?ref_src=twsrc%5Etfw">Tweets by sethcharleston</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+      <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/v32hSyaBS1E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>New Music Video</h1>
       </div>
     </section>
   </main>
