updated mobile layout

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1>Stay up to date.</h1>
         <a class="twitter-timeline" data-height="380px" data-theme="light" href="https://twitter.com/sethcharleston?ref_src=twsrc%5Etfw">Tweets by sethcharleston</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
-      <div>
+      <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/v32hSyaBS1E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>New Music Video</h1>
       </div>
