--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
   <main>
     <section class="info">
-      <div>
+      <div class="spotify">
         <iframe src="https://open.spotify.com/embed/album/6wOt3Hk0Wc8gDu7q5eOn7F" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <div>
           <h1>My debut EP is here.</h1>
