--- a/events.html
+++ b/events.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125789207-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-125789207-1');
   </script>
+  <!-- Facebook Pixel Code -->
+  <script>
+    ! function(f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function() {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = '2.0';
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '184267780136075');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=184267780136075&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,8 +48,13 @@
   <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
   <title>Seth Charleston - Events</title>
-  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0c8404aae0a66221037b9174b/99fb016fd95845214d6e88efc.js");</script>
+  <script id="mcjs">
+    ! function(c, h, i, m, p) {
+      m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
+    }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/0c8404aae0a66221037b9174b/99fb016fd95845214d6e88efc.js");
+  </script>
 </head>
+
 <body>
   <nav class="topNav" id="topNav">
     <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
@@ -41,27 +76,27 @@
   <footer>
     <div class="title">Social</div>
     <!-- Begin MailChimp Signup Form -->
-      <div id="mc_embed_signup">
-        <div id="imbeingrealstupid">Sign-up for my mailing list!</div>
+    <div id="mc_embed_signup">
+      <div id="imbeingrealstupid">Sign-up for my mailing list!</div>
       <form action="https://sethcharleston.us19.list-manage.com/subscribe/post?u=0c8404aae0a66221037b9174b&amp;id=e6ff11268b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-      <div class="mc-field-group">
-      	<label for="mce-FNAME">First Name: </label>
-      	<input type="text" value="" name="FNAME" placeholder="John Doe"class="required" id="mce-FNAME">
-      </div>
-      <div class="mc-field-group">
-      	<label for="mce-EMAIL">Email Address: </label>
-      	<input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
-      </div>
-      	<div id="mce-responses" class="clear">
-      		<div class="response" id="mce-error-response" style="display:none"></div>
-      		<div class="response" id="mce-success-response" style="display:none"></div>
-      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div id="mc_embed_signup_scroll">
+          <div class="mc-field-group">
+            <label for="mce-FNAME">First Name: </label>
+            <input type="text" value="" name="FNAME" placeholder="John Doe" class="required" id="mce-FNAME">
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-EMAIL">Email Address: </label>
+            <input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
+          </div>
+          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c8404aae0a66221037b9174b_e6ff11268b" tabindex="-1" value=""></div>
           <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
+        </div>
       </form>
-      </div>
+    </div>
     <!--End mc_embed_signup-->
     <div class="social">
       <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
@@ -84,25 +119,25 @@
         data.sort(function(a, b) {
           a = new Date(a.when);
           b = new Date(b.when);
-          return a<b ? -1 : a>b ? 1 : 0;
+          return a < b ? -1 : a > b ? 1 : 0;
         });
         data.forEach(function(event) {
           console.log(event);
-          x += "<div class=\"events\"><p>"+event.event+"</p>"+"<p>"+event.when+"</p>"+"<p>"+event.where+"</p>"+"<p>"+event.tickets+"</p></div>";
+          x += "<div class=\"events\"><p>" + event.event + "</p>" + "<p>" + event.when + "</p>" + "<p>" + event.where + "</p>" + "<p>" + event.tickets + "</p></div>";
           document.getElementById("info").innerHTML = x;
         });
       });
-
   </script>
   <script>
     function myFunction() {
       var x = document.getElementById("topNav");
       if (x.className === "topNav") {
-          x.className += " responsive";
+        x.className += " responsive";
       } else {
-          x.className = "topNav";
+        x.className = "topNav";
       }
     }
   </script>
 </body>
+
 </html>
