--- a/music.html
+++ b/music.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125789207-1"></script>
@@ -13,6 +14,32 @@
 
     gtag('config', 'UA-125789207-1');
   </script>
+  <!-- Facebook Pixel Code -->
+  <script>
+    ! function(f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function() {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = '2.0';
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '184267780136075');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=184267780136075&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -67,41 +94,42 @@
   </main>
   <footer>
     <section class="title">
-    <div class="social">
-      <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
-      <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
-      <a href="https://www.instagram.com/sethcharleston/" class="fa fa-instagram" target="_blank"></a>
-      <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
-      <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
-    </div>
-    <!-- Begin MailChimp Signup Form -->
+      <div class="social">
+        <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
+        <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/sethcharleston/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
+        <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
+      </div>
+      <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
         <div id="imbeingrealstupid">Sign-up for my mailing list!</div>
-      <form action="https://sethcharleston.us19.list-manage.com/subscribe/post?u=0c8404aae0a66221037b9174b&amp;id=e6ff11268b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form action="https://sethcharleston.us19.list-manage.com/subscribe/post?u=0c8404aae0a66221037b9174b&amp;id=e6ff11268b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+          novalidate>
           <div id="mc_embed_signup_scroll">
-      <div class="mc-field-group">
-      	<label for="mce-FNAME">First Name: </label>
-      	<input type="text" value="" name="FNAME" placeholder="John Doe"class="required" id="mce-FNAME">
-      </div>
-      <div class="mc-field-group">
-      	<label for="mce-EMAIL">Email Address: </label>
-      	<input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
-      </div>
-      	<div id="mce-responses" class="clear">
-      		<div class="response" id="mce-error-response" style="display:none"></div>
-      		<div class="response" id="mce-success-response" style="display:none"></div>
-      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c8404aae0a66221037b9174b_e6ff11268b" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <div class="mc-field-group">
+              <label for="mce-FNAME">First Name: </label>
+              <input type="text" value="" name="FNAME" placeholder="John Doe" class="required" id="mce-FNAME">
+            </div>
+            <div class="mc-field-group">
+              <label for="mce-EMAIL">Email Address: </label>
+              <input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c8404aae0a66221037b9174b_e6ff11268b" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
           </div>
-      </form>
+        </form>
       </div>
-    <!--End mc_embed_signup-->
-    <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
-  </section>
-  <section class="footerImg">
-    <img src="photos/HomePage.jpg" alt="Seth Charleston">
-  </section>
+      <!--End mc_embed_signup-->
+      <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
+    </section>
+    <section class="footerImg">
+      <img src="photos/HomePage.jpg" alt="Seth Charleston">
+    </section>
   </footer>
   <script>
     events = [];
