updated photos and video

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </nav>
   <header>
     <video autoplay muted loop>
-      <source src="videos\Take a Seat (Website Header).mp4" type="video/mp4">
+      <source src="videos\Cold Shoulder Acoustic (Website Header).mp4" type="video/mp4">
     </video>
     <div id="homeImage">
     </div>
@@ -139,7 +139,7 @@
       <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
     </section>
     <section class="footerImg">
-      <img src="photos/HomePage.jpg" alt="Seth Charleston">
+      <img src="photos/footer.jpeg" alt="Seth Charleston">
     </section>
   </footer>
   <script>
