--- a/music.html
+++ b/music.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
+  <title>Seth Charleston - Music</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125789207-1"></script>
   <script>
@@ -38,16 +46,7 @@
     fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=184267780136075&ev=PageView&noscript=1" /></noscript>
-  <!-- End Facebook Pixel Code -->
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
-  <title>Seth Charleston - Music</title>
+  <!-- MailChimp code -->
   <script id="mcjs">
     ! function(c, h, i, m, p) {
       m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
@@ -128,7 +127,7 @@
       <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
     </section>
     <section class="footerImg">
-      <img src="photos/footer.jpg" alt="Seth Charleston">
+      <img src="photos/footer.jpeg" alt="Seth Charleston">
     </section>
   </footer>
   <script>
@@ -140,9 +139,10 @@
       })
       .then(function(data) {
         data.sort(function(a, b) {
-          a = new Date(a.releaseDate);
-          b = new Date(b.releaseDate);
-          return a > b ? -1 : a < b ? 1 : 0;
+          adate = new Date(a.release);
+          bdate = new Date(b.release);
+          console.log(adate, bdate);
+          return adate > bdate ? -1 : adate < bdate ? 1 : 0;
         });
         data.forEach(function(song) {
           console.log(song);
