--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/v32hSyaBS1E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/OnFOFMWmGHA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>New Music Video</h1>
       </div>
     </section>
