--- a/index.html
+++ b/index.html
@@ -84,20 +84,19 @@
   <main>
     <section class="info">
       <div class="spotify">
-        <iframe src="https://open.spotify.com/embed/album/6wOt3Hk0Wc8gDu7q5eOn7F" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <!-- <iframe src="https://open.spotify.com/embed/album/6wOt3Hk0Wc8gDu7q5eOn7F" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
         <div>
-          <h1>My debut EP is here.</h1>
-          <p>Stay True, my debut EP, is out now. I spent the last year writing, producing, and recording this record in Los Angeles, CA. The result is four anthemic tunes celebrating the truth of the individual. I’m immensely proud of these songs and
-            I’m beyond excited to finally have this record out in the world. I sincerely hope you enjoy this project.</p>
+          <h1>New music is coming!</h1>
+          <p>I’m gearing up to release two of my most vulnerable and heartfelt works as part of a two-track single on 9/24. These songs tell a story of love, loss, and heartbreak. They’re both about a girl who changed my life forever.</p>
         </div>
       </div>
-      <div>
+      <!-- <div>
         <h1>Stay up to date.</h1>
         <a class="twitter-timeline" data-height="380px" data-theme="light" href="https://twitter.com/sethcharleston?ref_src=twsrc%5Etfw">Tweets by sethcharleston</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </div>
+      </div> -->
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OnFOFMWmGHA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TIZdm_TdTWs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>New Music Video</h1>
       </div>
     </section>
