--- a/music.html
+++ b/music.html
@@ -74,7 +74,8 @@
     </div>
   </nav>
   <header>
-    <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert">
+    <!-- <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert"> -->
+    <div id="music_img"></div>
     <div class="spacer">Music</div>
   </header>
   <main id="info" class="main">
