--- a/events.html
+++ b/events.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
+  <title>Seth Charleston - Events</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125789207-1"></script>
   <script>
@@ -38,16 +46,7 @@
     fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=184267780136075&ev=PageView&noscript=1" /></noscript>
-  <!-- End Facebook Pixel Code -->
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
-  <title>Seth Charleston - Events</title>
+  <!-- MailChimp code -->
   <script id="mcjs">
     ! function(c, h, i, m, p) {
       m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
@@ -57,69 +56,94 @@
 
 <body>
   <nav class="topNav" id="topNav">
-    <a href="index.html" class="imbeingstupid"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-    <a class="link" href="index.html">Home</a>
-    <a class="link active" href="events.html">Events</a>
-    <a class="link" href="music.html">Music</a>
+    <div id="logo">
+      <a href="index.html" class="logoWrap"><img src="photos/Seth_Charleston_Logo.png" class="logo" alt="Seth Charleston Logo" title="Seth Charleston"></a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+    <div id="links">
+      <a class="link" href="bio.html">Bio</a>
+      <a class="link" href="music.html">Music</a>
+      <a class="link active" href="events.html">Events</a>
+      <a class="link" href="store.html">Store</a>
+    </div>
+    <div id="social">
+      <a href="https://twitter.com/sethcharleston" class="fa fa-twitter link" target="_blank"></a>
+      <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook link" target="_blank"></a>
+      <a href="https://www.instagram.com/sethcharleston/" class="fa fa-instagram link" target="_blank"></a>
+      <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify link" target="_blank"></a>
+      <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube link" target="_blank"></a>
+    </div>
   </nav>
   <header>
-    <img class="non_index_img" src="photos/eventPage.jpg" alt="Seth Playing at a friends grad party">
-    <div class="spacer">Events:</div>
-    <div class="fader"></div>
+    <!-- <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert"> -->
+    <div id="music_img"></div>
+    <div class="spacer">Events</div>
   </header>
-  <main>
-    <section id="info" class="info">
-
+  <main id="info" class="main">
+    <!-- <section class="album">
+      <iframe src="https://open.spotify.com/embed/track/11ksP7Y2V8brYXQuvCug55" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </section>
+    <section class="album">
+      <iframe src="https://open.spotify.com/embed/album/40Kty0sQ1GE98rQrFof4lI?si=5iUH5IQSRDm2Y9TQFX_6JQ" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </section>
+    <section class="album">
+      <iframe src="https://open.spotify.com/embed/album/1G3nUk8F77byL54uIUnWEm" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </section>
+    <section class="album">
+      <iframe src="https://open.spotify.com/embed/album/2EvNfErIvTZai3STSyOxd0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </section> -->
   </main>
   <footer>
-    <div class="title">Social</div>
-    <!-- Begin MailChimp Signup Form -->
-    <div id="mc_embed_signup">
-      <div id="imbeingrealstupid">Sign-up for my mailing list!</div>
-      <form action="https://sethcharleston.us19.list-manage.com/subscribe/post?u=0c8404aae0a66221037b9174b&amp;id=e6ff11268b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <div class="mc-field-group">
-            <label for="mce-FNAME">First Name: </label>
-            <input type="text" value="" name="FNAME" placeholder="John Doe" class="required" id="mce-FNAME">
+    <section class="title">
+      <div class="social">
+        <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
+        <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/sethcharleston/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
+        <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
+      </div>
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+        <div id="imbeingrealstupid">Sign-up for my mailing list!</div>
+        <form action="https://sethcharleston.us19.list-manage.com/subscribe/post?u=0c8404aae0a66221037b9174b&amp;id=e6ff11268b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+          novalidate>
+          <div id="mc_embed_signup_scroll">
+            <div class="mc-field-group">
+              <label for="mce-FNAME">First Name: </label>
+              <input type="text" value="" name="FNAME" placeholder="John Doe" class="required" id="mce-FNAME">
+            </div>
+            <div class="mc-field-group">
+              <label for="mce-EMAIL">Email Address: </label>
+              <input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c8404aae0a66221037b9174b_e6ff11268b" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
           </div>
-          <div class="mc-field-group">
-            <label for="mce-EMAIL">Email Address: </label>
-            <input type="email" value="" name="EMAIL" placeholder="john.doe@gmail.com" class="required email" id="mce-EMAIL">
-          </div>
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-          </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0c8404aae0a66221037b9174b_e6ff11268b" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        </div>
-      </form>
-    </div>
-    <!--End mc_embed_signup-->
-    <div class="social">
-      <a href="https://twitter.com/sethcharleston" class="fa fa-twitter" target="_blank"></a>
-      <a href="https://www.facebook.com/sethcharlestonmusic/" class="fa fa-facebook" target="_blank"></a>
-      <a href="https://www.instagram.com/sethcharlestonmusic" class="fa fa-instagram" target="_blank"></a>
-      <a href="https://open.spotify.com/artist/1A5BJhYP6UBWnqVhuJnTqy?si=9cBSwHBCSJWLlZbhqA3g2g" class="fa fa-spotify" target="_blank"></a>
-      <a href="https://www.youtube.com/channel/UC1F4-aWEuIr2PRG2BP5qZDA" class="fa fa-youtube" target="_blank"></a>
-      <p>Booking: <a href="mailto:seth.charleston@gmail.com">seth.charleston@gmail.com</a></p>
-    </div>
-    <div class="footer">Web Developement By <a href="mailto:arthur.sommer@gmail.com">Arthur Sommer</a></div>
+        </form>
+      </div>
+      <!--End mc_embed_signup-->
+      <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
+    </section>
+    <section class="footerImg">
+      <img src="photos/footer.jpeg" alt="Seth Charleston">
+    </section>
   </footer>
   <script>
     events = [];
     var x = "";
-    fetch('https://api.sethcharleston.com/test1')
+    fetch('https://api.sethcharleston.com/test1/')
       .then(function(response) {
         return response.json();
       })
       .then(function(data) {
         data.sort(function(a, b) {
-          a = new Date(a.when);
-          b = new Date(b.when);
-          return a < b ? -1 : a > b ? 1 : 0;
+          adate = new Date(a.when);
+          bdate = new Date(b.when);
+          return adate > bdate ? -1 : adate < bdate ? 1 : 0;
         });
         data.forEach(function(event) {
           console.log(event);
