--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <div id="links">
       <a class="link" href="bio.html">Bio</a>
       <a class="link" href="music.html">Music</a>
+      <a class="link" href="events.html">Events</a>
       <a class="link" href="store.html">Store</a>
     </div>
     <div id="social">
