--- a/store.html
+++ b/store.html
@@ -64,6 +64,7 @@
     <div id="links">
       <a class="link" href="bio.html">Bio</a>
       <a class="link" href="music.html">Music</a>
+      <a class="link" href="events.html">Events</a>
       <a class="link active" href="store.html">Store</a>
     </div>
     <div id="social">
