fixed broken homepage

--- a/events.html
+++ b/events.html
@@ -79,7 +79,7 @@
     <div id="music_img"></div>
     <div class="spacer">Events</div>
   </header>
-  <main id="info" class="main info">
+  <main id="info" class="main">
     <!-- <section class="album">
       <iframe src="https://open.spotify.com/embed/track/11ksP7Y2V8brYXQuvCug55" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </section>
