--- a/events.html
+++ b/events.html
@@ -143,11 +143,13 @@
         data.sort(function(a, b) {
           adate = new Date(a.when);
           bdate = new Date(b.when);
-          return adate > bdate ? -1 : adate < bdate ? 1 : 0;
+          return adate > bdate ? 1 : adate < bdate ? -1 : 0;
         });
         data.forEach(function(event) {
           console.log(event);
-          x += "<div class=\"events\"><p>" + event.event + "</p>" + "<p>" + event.when + "</p>" + "<p>" + event.where + "</p>" + "<p>" + event.tickets + "</p></div>";
+          var when = new Date(event.when);
+          var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+          x += "<div class=\"events\"><h1>" + event.event + "</h1>" + "<p>" + when.toLocaleDateString("en-US", options) + "</p>" + "<p>" + event.where + "</p>" + "<p>" + event.tickets + "</p></div>";
           document.getElementById("info").innerHTML = x;
         });
       });
