new cosmetic updates

--- a/events.html
+++ b/events.html
@@ -76,7 +76,7 @@
   </nav>
   <header>
     <!-- <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert"> -->
-    <div id="music_img"></div>
+    <div id="events_img"></div>
     <div class="spacer">Events</div>
   </header>
   <main id="info" class="main">
