new music video

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div> -->
       <div class="video">
-        <h1>New Music Video</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TIZdm_TdTWs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Newest Video</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ez1xoAw82Ns" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
   </main>
