New photos and updated header (darkspace)

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </div>
   </nav>
   <header>
+    <div id="aboveHeader"></div>
     <video autoplay muted loop>
       <source src="videos\Cold Shoulder Acoustic (Website Header).mp4" type="video/mp4">
     </video>
