--- a/music.html
+++ b/music.html
@@ -75,6 +75,7 @@
     </div>
   </nav>
   <header>
+    <div id="aboveHeader"></div>
     <!-- <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert"> -->
     <div id="music_img"></div>
     <div class="spacer">Music</div>
