--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
-  <title>Seth Charleston - Bio</title>
+  <title>Seth Charleston - About</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125789207-1"></script>
   <script>
@@ -61,9 +61,9 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div id="links">
-      <a class="link active" href="bio.html">Bio</a>
+      <a class="link active" href="about.html">About</a>
       <a class="link" href="music.html">Music</a>
-      <a class="link" href="events.html">Events</a>
+      <a class="link" href="shows.html">Shows</a>
       <a class="link" href="store.html">Store</a>
     </div>
     <div id="social">
@@ -78,7 +78,7 @@
     <div id="aboveHeader"></div>
     <!-- <img class="non_index_img" src="photos/BioPage2.jpeg" alt="Seth Playing at the POPs concert"> -->
     <div id="bio_img"></div>
-    <div class="spacer">Bio</div>
+    <div class="spacer">About</div>
   </header>
   <main class="main">
     <section class="info">
