--- a/store.html
+++ b/store.html
@@ -62,7 +62,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div id="links">
-      <a class="link" href="bio.html">Bio</a>
+      <a class="link" href="about.html">About</a>
       <a class="link" href="music.html">Music</a>
       <a class="link" href="events.html">Events</a>
       <a class="link active" href="store.html">Store</a>
