--- a/store.html
+++ b/store.html
@@ -64,7 +64,7 @@
     <div id="links">
       <a class="link" href="about.html">About</a>
       <a class="link" href="music.html">Music</a>
-      <a class="link" href="events.html">Events</a>
+      <a class="link" href="shows.html">Shows</a>
       <a class="link active" href="store.html">Store</a>
     </div>
     <div id="social">
