--- a/music.html
+++ b/music.html
@@ -77,7 +77,9 @@
   <header>
     <div id="aboveHeader"></div>
     <!-- <img class="non_index_img" src="photos/MusicPage.jpg" alt="Seth Playing at the POPs concert"> -->
-    <div id="music_img"></div>
+    <div id="music_img">
+      <img src="photos\Music Page (7.21.23).png" alt="" width="100%" height="100%">
+    </div>
     <div class="spacer">Music</div>
   </header>
   <main id="info" class="main">
@@ -130,7 +132,7 @@
       <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
     </section>
     <section class="footerImg">
-      <img src="photos/footer.jpeg" alt="Seth Charleston">
+      <img src="photos\NEW Footer Photo (7.21.23).png" alt="Seth Charleston">
     </section>
   </footer>
   <script>
