--- a/store.html
+++ b/store.html
@@ -120,7 +120,7 @@
       <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
     </section>
     <section class="footerImg">
-      <img src="photos/footer.jpeg" alt="Seth Charleston">
+      <img src="photos\NEW Footer Photo (7.21.23).png" alt="Seth Charleston">
     </section>
   </footer>
   <script>
