--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <source src="videos\Cold Shoulder Acoustic (Website Header).mp4" type="video/mp4">
     </video>
     <div id="homeImage">
+      <img src="photos/Mobile Homepage Header (7.22.23).png" alt="" width="100%" height="100%">
     </div>
     <img class="words" src="photos/Seth_Charleston.png" alt="Seth Charleston">
   </header>
@@ -139,7 +140,7 @@
       <div class="footer"><a href="mailto:seth.charleston@gmail.com">Booking</a></br></br><a href="mailto:arthur.sommer@gmail.com">Web Developement By Arthur Sommer</a></div>
     </section>
     <section class="footerImg">
-      <img src="photos/footer.jpeg" alt="Seth Charleston">
+      <img src="photos\NEW Footer Photo (7.21.23).png" alt="Seth Charleston">
     </section>
   </footer>
   <script>
